gcc/ldv-aspect-parser.output
Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input advice_definition
    3      | input named_pointcut

    4 named_pointcut: LDV_ID LDV_ID ':' composite_pointcut

    5 advice_definition: advice_declaration LDV_BODY

    6 advice_declaration: LDV_ID ':' composite_pointcut

    7 composite_pointcut: LDV_ID
    8                   | primitive_pointcut
    9                   | '!' composite_pointcut
   10                   | composite_pointcut "||" composite_pointcut
   11                   | composite_pointcut "&&" composite_pointcut
   12                   | '(' composite_pointcut ')'

   13 primitive_pointcut: LDV_MACRO_POINTCUT '(' primitive_pointcut_signature_macro ')'
   14                   | LDV_FILE_POINTCUT '(' primitive_pointcut_signature_file ')'
   15                   | LDV_ID '(' primitive_pointcut_signature_declaration ')'

   16 primitive_pointcut_signature_macro: LDV_ID
   17                                   | LDV_ID '(' macro_param_opt ')'

   18 primitive_pointcut_signature_file: LDV_FILE

   19 macro_param_opt: %empty
   20                | macro_param

   21 macro_param: LDV_ID
   22            | macro_param ',' LDV_ID
   23            | "..."
   24            | LDV_ID "..."
   25            | macro_param ',' "..."
   26            | macro_param ',' LDV_ID "..."

   27 primitive_pointcut_signature_declaration: c_declaration

   28 c_declaration: c_declaration_specifiers
   29              | c_declaration_specifiers c_declarator

   30 $@1: %empty

   31 $@2: %empty

   32 c_declaration_specifiers: $@1 c_declaration_specifiers_aux $@2

   33 c_declaration_specifiers_aux: c_storage_class_specifier c_declaration_specifiers_opt
   34                             | c_type_specifier c_declaration_specifiers_opt
   35                             | c_type_qualifier c_declaration_specifiers_opt
   36                             | c_function_specifier c_declaration_specifiers_opt
   37                             | ".."
   38                             | "..."

   39 c_declaration_specifiers_opt: %empty
   40                             | c_declaration_specifiers_aux

   41 c_storage_class_specifier: LDV_TYPEDEF
   42                          | LDV_EXTERN
   43                          | LDV_STATIC
   44                          | LDV_AUTO
   45                          | LDV_REGISTER

   46 c_type_specifier: LDV_VOID
   47                 | LDV_CHAR
   48                 | LDV_INT
   49                 | LDV_FLOAT
   50                 | LDV_DOUBLE
   51                 | LDV_BOOL
   52                 | LDV_COMPLEX
   53                 | LDV_SHORT
   54                 | LDV_LONG
   55                 | LDV_SIGNED
   56                 | LDV_UNSIGNED
   57                 | LDV_STRUCT LDV_ID
   58                 | LDV_UNION LDV_ID
   59                 | LDV_ENUM LDV_ID
   60                 | LDV_TYPEDEF_NAME
   61                 | LDV_UNIVERSAL_TYPE_SPECIFIER

   62 c_type_qualifier: LDV_CONST
   63                 | LDV_RESTRICT
   64                 | LDV_VOLATILE

   65 c_function_specifier: LDV_INLINE

   66 c_declarator: c_pointer_opt c_direct_declarator

   67 c_direct_declarator: LDV_ID
   68                    | '(' c_declarator ')'
   69                    | c_direct_declarator '[' int_opt ']'
   70                    | c_direct_declarator '(' c_parameter_type_list ')'

   71 c_pointer_opt: %empty
   72              | c_pointer

   73 c_pointer: '*' c_type_qualifier_list_opt
   74          | '*' c_type_qualifier_list_opt c_pointer

   75 int_opt: %empty
   76        | LDV_INT_NUMB
   77        | LDV_ID

   78 c_type_qualifier_list_opt: %empty
   79                          | c_type_qualifier_list

   80 c_type_qualifier_list: c_type_qualifier
   81                      | c_type_qualifier_list c_type_qualifier

   82 c_parameter_type_list: c_parameter_list

   83 c_parameter_list: c_parameter_declaration
   84                 | c_parameter_list ',' c_parameter_declaration

   85 c_parameter_declaration: c_declaration_specifiers c_declarator
   86                        | c_declaration_specifiers c_abstract_declarator_opt

   87 c_abstract_declarator: c_pointer
   88                      | c_pointer_opt c_direct_abstract_declarator

   89 c_abstract_declarator_opt: %empty
   90                          | c_abstract_declarator

   91 c_direct_abstract_declarator: '(' c_abstract_declarator ')'
   92                             | c_direct_abstract_declarator_opt '[' int_opt ']'
   93                             | c_direct_abstract_declarator '(' c_parameter_type_list_opt ')'

   94 c_direct_abstract_declarator_opt: %empty
   95                                 | c_direct_abstract_declarator

   96 c_parameter_type_list_opt: %empty
   97                          | c_parameter_type_list


Terminals, with rules where they appear

$end (0) 0
'!' (33) 9
'(' (40) 12 13 14 15 17 68 70 91 93
')' (41) 12 13 14 15 17 68 70 91 93
'*' (42) 73 74
',' (44) 22 25 26 84
':' (58) 4 6
'[' (91) 69 92
']' (93) 69 92
error (256)
LDV_FILE (258) 18
LDV_BODY (259) 5
LDV_ID (260) 4 6 7 15 16 17 21 22 24 26 57 58 59 67 77
LDV_INT_NUMB (261) 76
LDV_MACRO_POINTCUT (262) 13
LDV_FILE_POINTCUT (263) 14
LDV_TYPEDEF (264) 41
LDV_EXTERN (265) 42
LDV_STATIC (266) 43
LDV_AUTO (267) 44
LDV_REGISTER (268) 45
LDV_VOID (269) 46
LDV_CHAR (270) 47
LDV_INT (271) 48
LDV_FLOAT (272) 49
LDV_DOUBLE (273) 50
LDV_BOOL (274) 51
LDV_COMPLEX (275) 52
LDV_SHORT (276) 53
LDV_LONG (277) 54
LDV_SIGNED (278) 55
LDV_UNSIGNED (279) 56
LDV_STRUCT (280) 57
LDV_UNION (281) 58
LDV_ENUM (282) 59
LDV_TYPEDEF_NAME (283) 60
LDV_UNIVERSAL_TYPE_SPECIFIER (284) 61
LDV_CONST (285) 62
LDV_RESTRICT (286) 63
LDV_VOLATILE (287) 64
LDV_INLINE (288) 65
"&&" (289) 11
".." (290) 37
"..." (291) 23 24 25 26 38
"||" (292) 10


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
input (47)
    on left: 1 2 3, on right: 0 2 3
named_pointcut (48)
    on left: 4, on right: 3
advice_definition (49)
    on left: 5, on right: 2
advice_declaration (50)
    on left: 6, on right: 5
composite_pointcut (51)
    on left: 7 8 9 10 11 12, on right: 4 6 9 10 11 12
primitive_pointcut (52)
    on left: 13 14 15, on right: 8
primitive_pointcut_signature_macro (53)
    on left: 16 17, on right: 13
primitive_pointcut_signature_file (54)
    on left: 18, on right: 14
macro_param_opt (55)
    on left: 19 20, on right: 17
macro_param (56)
    on left: 21 22 23 24 25 26, on right: 20 22 25 26
primitive_pointcut_signature_declaration (57)
    on left: 27, on right: 15
c_declaration (58)
    on left: 28 29, on right: 27
c_declaration_specifiers (59)
    on left: 32, on right: 28 29 85 86
$@1 (60)
    on left: 30, on right: 32
$@2 (61)
    on left: 31, on right: 32
c_declaration_specifiers_aux (62)
    on left: 33 34 35 36 37 38, on right: 32 40
c_declaration_specifiers_opt (63)
    on left: 39 40, on right: 33 34 35 36
c_storage_class_specifier (64)
    on left: 41 42 43 44 45, on right: 33
c_type_specifier (65)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61, on right:
    34
c_type_qualifier (66)
    on left: 62 63 64, on right: 35 80 81
c_function_specifier (67)
    on left: 65, on right: 36
c_declarator (68)
    on left: 66, on right: 29 68 85
c_direct_declarator (69)
    on left: 67 68 69 70, on right: 66 69 70
c_pointer_opt (70)
    on left: 71 72, on right: 66 88
c_pointer (71)
    on left: 73 74, on right: 72 74 87
int_opt (72)
    on left: 75 76 77, on right: 69 92
c_type_qualifier_list_opt (73)
    on left: 78 79, on right: 73 74
c_type_qualifier_list (74)
    on left: 80 81, on right: 79 81
c_parameter_type_list (75)
    on left: 82, on right: 70 97
c_parameter_list (76)
    on left: 83 84, on right: 82 84
c_parameter_declaration (77)
    on left: 85 86, on right: 83 84
c_abstract_declarator (78)
    on left: 87 88, on right: 90 91
c_abstract_declarator_opt (79)
    on left: 89 90, on right: 86
c_direct_abstract_declarator (80)
    on left: 91 92 93, on right: 88 93 95
c_direct_abstract_declarator_opt (81)
    on left: 94 95, on right: 92
c_parameter_type_list_opt (82)
    on left: 96 97, on right: 93


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . advice_definition
    3      | input . named_pointcut

    $end    shift, and go to state 2
    LDV_ID  shift, and go to state 3

    named_pointcut      go to state 4
    advice_definition   go to state 5
    advice_declaration  go to state 6


State 2

    0 $accept: input $end .

    $default  accept


State 3

    4 named_pointcut: LDV_ID . LDV_ID ':' composite_pointcut
    6 advice_declaration: LDV_ID . ':' composite_pointcut

    LDV_ID  shift, and go to state 7
    ':'     shift, and go to state 8


State 4

    3 input: input named_pointcut .

    $default  reduce using rule 3 (input)


State 5

    2 input: input advice_definition .

    $default  reduce using rule 2 (input)


State 6

    5 advice_definition: advice_declaration . LDV_BODY

    LDV_BODY  shift, and go to state 9


State 7

    4 named_pointcut: LDV_ID LDV_ID . ':' composite_pointcut

    ':'  shift, and go to state 10


State 8

    6 advice_declaration: LDV_ID ':' . composite_pointcut

    LDV_ID              shift, and go to state 11
    LDV_MACRO_POINTCUT  shift, and go to state 12
    LDV_FILE_POINTCUT   shift, and go to state 13
    '!'                 shift, and go to state 14
    '('                 shift, and go to state 15

    composite_pointcut  go to state 16
    primitive_pointcut  go to state 17


State 9

    5 advice_definition: advice_declaration LDV_BODY .

    $default  reduce using rule 5 (advice_definition)


State 10

    4 named_pointcut: LDV_ID LDV_ID ':' . composite_pointcut

    LDV_ID              shift, and go to state 11
    LDV_MACRO_POINTCUT  shift, and go to state 12
    LDV_FILE_POINTCUT   shift, and go to state 13
    '!'                 shift, and go to state 14
    '('                 shift, and go to state 15

    composite_pointcut  go to state 18
    primitive_pointcut  go to state 17


State 11

    7 composite_pointcut: LDV_ID .
   15 primitive_pointcut: LDV_ID . '(' primitive_pointcut_signature_declaration ')'

    '('  shift, and go to state 19

    $default  reduce using rule 7 (composite_pointcut)


State 12

   13 primitive_pointcut: LDV_MACRO_POINTCUT . '(' primitive_pointcut_signature_macro ')'

    '('  shift, and go to state 20


State 13

   14 primitive_pointcut: LDV_FILE_POINTCUT . '(' primitive_pointcut_signature_file ')'

    '('  shift, and go to state 21


State 14

    9 composite_pointcut: '!' . composite_pointcut

    LDV_ID              shift, and go to state 11
    LDV_MACRO_POINTCUT  shift, and go to state 12
    LDV_FILE_POINTCUT   shift, and go to state 13
    '!'                 shift, and go to state 14
    '('                 shift, and go to state 15

    composite_pointcut  go to state 22
    primitive_pointcut  go to state 17


State 15

   12 composite_pointcut: '(' . composite_pointcut ')'

    LDV_ID              shift, and go to state 11
    LDV_MACRO_POINTCUT  shift, and go to state 12
    LDV_FILE_POINTCUT   shift, and go to state 13
    '!'                 shift, and go to state 14
    '('                 shift, and go to state 15

    composite_pointcut  go to state 23
    primitive_pointcut  go to state 17


State 16

    6 advice_declaration: LDV_ID ':' composite_pointcut .
   10 composite_pointcut: composite_pointcut . "||" composite_pointcut
   11                   | composite_pointcut . "&&" composite_pointcut

    "&&"  shift, and go to state 24
    "||"  shift, and go to state 25

    $default  reduce using rule 6 (advice_declaration)


State 17

    8 composite_pointcut: primitive_pointcut .

    $default  reduce using rule 8 (composite_pointcut)


State 18

    4 named_pointcut: LDV_ID LDV_ID ':' composite_pointcut .
   10 composite_pointcut: composite_pointcut . "||" composite_pointcut
   11                   | composite_pointcut . "&&" composite_pointcut

    "&&"  shift, and go to state 24
    "||"  shift, and go to state 25

    $default  reduce using rule 4 (named_pointcut)


State 19

   15 primitive_pointcut: LDV_ID '(' . primitive_pointcut_signature_declaration ')'

    $default  reduce using rule 30 ($@1)

    primitive_pointcut_signature_declaration  go to state 26
    c_declaration                             go to state 27
    c_declaration_specifiers                  go to state 28
    $@1                                       go to state 29


State 20

   13 primitive_pointcut: LDV_MACRO_POINTCUT '(' . primitive_pointcut_signature_macro ')'

    LDV_ID  shift, and go to state 30

    primitive_pointcut_signature_macro  go to state 31


State 21

   14 primitive_pointcut: LDV_FILE_POINTCUT '(' . primitive_pointcut_signature_file ')'

    LDV_FILE  shift, and go to state 32

    primitive_pointcut_signature_file  go to state 33


State 22

    9 composite_pointcut: '!' composite_pointcut .
   10                   | composite_pointcut . "||" composite_pointcut
   11                   | composite_pointcut . "&&" composite_pointcut

    $default  reduce using rule 9 (composite_pointcut)


State 23

   10 composite_pointcut: composite_pointcut . "||" composite_pointcut
   11                   | composite_pointcut . "&&" composite_pointcut
   12                   | '(' composite_pointcut . ')'

    "&&"  shift, and go to state 24
    "||"  shift, and go to state 25
    ')'   shift, and go to state 34


State 24

   11 composite_pointcut: composite_pointcut "&&" . composite_pointcut

    LDV_ID              shift, and go to state 11
    LDV_MACRO_POINTCUT  shift, and go to state 12
    LDV_FILE_POINTCUT   shift, and go to state 13
    '!'                 shift, and go to state 14
    '('                 shift, and go to state 15

    composite_pointcut  go to state 35
    primitive_pointcut  go to state 17


State 25

   10 composite_pointcut: composite_pointcut "||" . composite_pointcut

    LDV_ID              shift, and go to state 11
    LDV_MACRO_POINTCUT  shift, and go to state 12
    LDV_FILE_POINTCUT   shift, and go to state 13
    '!'                 shift, and go to state 14
    '('                 shift, and go to state 15

    composite_pointcut  go to state 36
    primitive_pointcut  go to state 17


State 26

   15 primitive_pointcut: LDV_ID '(' primitive_pointcut_signature_declaration . ')'

    ')'  shift, and go to state 37


State 27

   27 primitive_pointcut_signature_declaration: c_declaration .

    $default  reduce using rule 27 (primitive_pointcut_signature_declaration)


State 28

   28 c_declaration: c_declaration_specifiers .
   29              | c_declaration_specifiers . c_declarator

    '*'  shift, and go to state 38

    ')'       reduce using rule 28 (c_declaration)
    $default  reduce using rule 71 (c_pointer_opt)

    c_declarator   go to state 39
    c_pointer_opt  go to state 40
    c_pointer      go to state 41


State 29

   32 c_declaration_specifiers: $@1 . c_declaration_specifiers_aux $@2

    LDV_TYPEDEF                   shift, and go to state 42
    LDV_EXTERN                    shift, and go to state 43
    LDV_STATIC                    shift, and go to state 44
    LDV_AUTO                      shift, and go to state 45
    LDV_REGISTER                  shift, and go to state 46
    LDV_VOID                      shift, and go to state 47
    LDV_CHAR                      shift, and go to state 48
    LDV_INT                       shift, and go to state 49
    LDV_FLOAT                     shift, and go to state 50
    LDV_DOUBLE                    shift, and go to state 51
    LDV_BOOL                      shift, and go to state 52
    LDV_COMPLEX                   shift, and go to state 53
    LDV_SHORT                     shift, and go to state 54
    LDV_LONG                      shift, and go to state 55
    LDV_SIGNED                    shift, and go to state 56
    LDV_UNSIGNED                  shift, and go to state 57
    LDV_STRUCT                    shift, and go to state 58
    LDV_UNION                     shift, and go to state 59
    LDV_ENUM                      shift, and go to state 60
    LDV_TYPEDEF_NAME              shift, and go to state 61
    LDV_UNIVERSAL_TYPE_SPECIFIER  shift, and go to state 62
    LDV_CONST                     shift, and go to state 63
    LDV_RESTRICT                  shift, and go to state 64
    LDV_VOLATILE                  shift, and go to state 65
    LDV_INLINE                    shift, and go to state 66
    ".."                          shift, and go to state 67
    "..."                         shift, and go to state 68

    c_declaration_specifiers_aux  go to state 69
    c_storage_class_specifier     go to state 70
    c_type_specifier              go to state 71
    c_type_qualifier              go to state 72
    c_function_specifier          go to state 73


State 30

   16 primitive_pointcut_signature_macro: LDV_ID .
   17                                   | LDV_ID . '(' macro_param_opt ')'

    '('  shift, and go to state 74

    $default  reduce using rule 16 (primitive_pointcut_signature_macro)


State 31

   13 primitive_pointcut: LDV_MACRO_POINTCUT '(' primitive_pointcut_signature_macro . ')'

    ')'  shift, and go to state 75


State 32

   18 primitive_pointcut_signature_file: LDV_FILE .

    $default  reduce using rule 18 (primitive_pointcut_signature_file)


State 33

   14 primitive_pointcut: LDV_FILE_POINTCUT '(' primitive_pointcut_signature_file . ')'

    ')'  shift, and go to state 76


State 34

   12 composite_pointcut: '(' composite_pointcut ')' .

    $default  reduce using rule 12 (composite_pointcut)


State 35

   10 composite_pointcut: composite_pointcut . "||" composite_pointcut
   11                   | composite_pointcut . "&&" composite_pointcut
   11                   | composite_pointcut "&&" composite_pointcut .

    $default  reduce using rule 11 (composite_pointcut)


State 36

   10 composite_pointcut: composite_pointcut . "||" composite_pointcut
   10                   | composite_pointcut "||" composite_pointcut .
   11                   | composite_pointcut . "&&" composite_pointcut

    "&&"  shift, and go to state 24

    $default  reduce using rule 10 (composite_pointcut)


State 37

   15 primitive_pointcut: LDV_ID '(' primitive_pointcut_signature_declaration ')' .

    $default  reduce using rule 15 (primitive_pointcut)


State 38

   73 c_pointer: '*' . c_type_qualifier_list_opt
   74          | '*' . c_type_qualifier_list_opt c_pointer

    LDV_CONST     shift, and go to state 63
    LDV_RESTRICT  shift, and go to state 64
    LDV_VOLATILE  shift, and go to state 65

    $default  reduce using rule 78 (c_type_qualifier_list_opt)

    c_type_qualifier           go to state 77
    c_type_qualifier_list_opt  go to state 78
    c_type_qualifier_list      go to state 79


State 39

   29 c_declaration: c_declaration_specifiers c_declarator .

    $default  reduce using rule 29 (c_declaration)


State 40

   66 c_declarator: c_pointer_opt . c_direct_declarator

    LDV_ID  shift, and go to state 80
    '('     shift, and go to state 81

    c_direct_declarator  go to state 82


State 41

   72 c_pointer_opt: c_pointer .

    $default  reduce using rule 72 (c_pointer_opt)


State 42

   41 c_storage_class_specifier: LDV_TYPEDEF .

    $default  reduce using rule 41 (c_storage_class_specifier)


State 43

   42 c_storage_class_specifier: LDV_EXTERN .

    $default  reduce using rule 42 (c_storage_class_specifier)


State 44

   43 c_storage_class_specifier: LDV_STATIC .

    $default  reduce using rule 43 (c_storage_class_specifier)


State 45

   44 c_storage_class_specifier: LDV_AUTO .

    $default  reduce using rule 44 (c_storage_class_specifier)


State 46

   45 c_storage_class_specifier: LDV_REGISTER .

    $default  reduce using rule 45 (c_storage_class_specifier)


State 47

   46 c_type_specifier: LDV_VOID .

    $default  reduce using rule 46 (c_type_specifier)


State 48

   47 c_type_specifier: LDV_CHAR .

    $default  reduce using rule 47 (c_type_specifier)


State 49

   48 c_type_specifier: LDV_INT .

    $default  reduce using rule 48 (c_type_specifier)


State 50

   49 c_type_specifier: LDV_FLOAT .

    $default  reduce using rule 49 (c_type_specifier)


State 51

   50 c_type_specifier: LDV_DOUBLE .

    $default  reduce using rule 50 (c_type_specifier)


State 52

   51 c_type_specifier: LDV_BOOL .

    $default  reduce using rule 51 (c_type_specifier)


State 53

   52 c_type_specifier: LDV_COMPLEX .

    $default  reduce using rule 52 (c_type_specifier)


State 54

   53 c_type_specifier: LDV_SHORT .

    $default  reduce using rule 53 (c_type_specifier)


State 55

   54 c_type_specifier: LDV_LONG .

    $default  reduce using rule 54 (c_type_specifier)


State 56

   55 c_type_specifier: LDV_SIGNED .

    $default  reduce using rule 55 (c_type_specifier)


State 57

   56 c_type_specifier: LDV_UNSIGNED .

    $default  reduce using rule 56 (c_type_specifier)


State 58

   57 c_type_specifier: LDV_STRUCT . LDV_ID

    LDV_ID  shift, and go to state 83


State 59

   58 c_type_specifier: LDV_UNION . LDV_ID

    LDV_ID  shift, and go to state 84


State 60

   59 c_type_specifier: LDV_ENUM . LDV_ID

    LDV_ID  shift, and go to state 85


State 61

   60 c_type_specifier: LDV_TYPEDEF_NAME .

    $default  reduce using rule 60 (c_type_specifier)


State 62

   61 c_type_specifier: LDV_UNIVERSAL_TYPE_SPECIFIER .

    $default  reduce using rule 61 (c_type_specifier)


State 63

   62 c_type_qualifier: LDV_CONST .

    $default  reduce using rule 62 (c_type_qualifier)


State 64

   63 c_type_qualifier: LDV_RESTRICT .

    $default  reduce using rule 63 (c_type_qualifier)


State 65

   64 c_type_qualifier: LDV_VOLATILE .

    $default  reduce using rule 64 (c_type_qualifier)


State 66

   65 c_function_specifier: LDV_INLINE .

    $default  reduce using rule 65 (c_function_specifier)


State 67

   37 c_declaration_specifiers_aux: ".." .

    $default  reduce using rule 37 (c_declaration_specifiers_aux)


State 68

   38 c_declaration_specifiers_aux: "..." .

    $default  reduce using rule 38 (c_declaration_specifiers_aux)


State 69

   32 c_declaration_specifiers: $@1 c_declaration_specifiers_aux . $@2

    $default  reduce using rule 31 ($@2)

    $@2  go to state 86


State 70

   33 c_declaration_specifiers_aux: c_storage_class_specifier . c_declaration_specifiers_opt

    LDV_TYPEDEF                   shift, and go to state 42
    LDV_EXTERN                    shift, and go to state 43
    LDV_STATIC                    shift, and go to state 44
    LDV_AUTO                      shift, and go to state 45
    LDV_REGISTER                  shift, and go to state 46
    LDV_VOID                      shift, and go to state 47
    LDV_CHAR                      shift, and go to state 48
    LDV_INT                       shift, and go to state 49
    LDV_FLOAT                     shift, and go to state 50
    LDV_DOUBLE                    shift, and go to state 51
    LDV_BOOL                      shift, and go to state 52
    LDV_COMPLEX                   shift, and go to state 53
    LDV_SHORT                     shift, and go to state 54
    LDV_LONG                      shift, and go to state 55
    LDV_SIGNED                    shift, and go to state 56
    LDV_UNSIGNED                  shift, and go to state 57
    LDV_STRUCT                    shift, and go to state 58
    LDV_UNION                     shift, and go to state 59
    LDV_ENUM                      shift, and go to state 60
    LDV_TYPEDEF_NAME              shift, and go to state 61
    LDV_UNIVERSAL_TYPE_SPECIFIER  shift, and go to state 62
    LDV_CONST                     shift, and go to state 63
    LDV_RESTRICT                  shift, and go to state 64
    LDV_VOLATILE                  shift, and go to state 65
    LDV_INLINE                    shift, and go to state 66
    ".."                          shift, and go to state 67
    "..."                         shift, and go to state 68

    $default  reduce using rule 39 (c_declaration_specifiers_opt)

    c_declaration_specifiers_aux  go to state 87
    c_declaration_specifiers_opt  go to state 88
    c_storage_class_specifier     go to state 70
    c_type_specifier              go to state 71
    c_type_qualifier              go to state 72
    c_function_specifier          go to state 73


State 71

   34 c_declaration_specifiers_aux: c_type_specifier . c_declaration_specifiers_opt

    LDV_TYPEDEF                   shift, and go to state 42
    LDV_EXTERN                    shift, and go to state 43
    LDV_STATIC                    shift, and go to state 44
    LDV_AUTO                      shift, and go to state 45
    LDV_REGISTER                  shift, and go to state 46
    LDV_VOID                      shift, and go to state 47
    LDV_CHAR                      shift, and go to state 48
    LDV_INT                       shift, and go to state 49
    LDV_FLOAT                     shift, and go to state 50
    LDV_DOUBLE                    shift, and go to state 51
    LDV_BOOL                      shift, and go to state 52
    LDV_COMPLEX                   shift, and go to state 53
    LDV_SHORT                     shift, and go to state 54
    LDV_LONG                      shift, and go to state 55
    LDV_SIGNED                    shift, and go to state 56
    LDV_UNSIGNED                  shift, and go to state 57
    LDV_STRUCT                    shift, and go to state 58
    LDV_UNION                     shift, and go to state 59
    LDV_ENUM                      shift, and go to state 60
    LDV_TYPEDEF_NAME              shift, and go to state 61
    LDV_UNIVERSAL_TYPE_SPECIFIER  shift, and go to state 62
    LDV_CONST                     shift, and go to state 63
    LDV_RESTRICT                  shift, and go to state 64
    LDV_VOLATILE                  shift, and go to state 65
    LDV_INLINE                    shift, and go to state 66
    ".."                          shift, and go to state 67
    "..."                         shift, and go to state 68

    $default  reduce using rule 39 (c_declaration_specifiers_opt)

    c_declaration_specifiers_aux  go to state 87
    c_declaration_specifiers_opt  go to state 89
    c_storage_class_specifier     go to state 70
    c_type_specifier              go to state 71
    c_type_qualifier              go to state 72
    c_function_specifier          go to state 73


State 72

   35 c_declaration_specifiers_aux: c_type_qualifier . c_declaration_specifiers_opt

    LDV_TYPEDEF                   shift, and go to state 42
    LDV_EXTERN                    shift, and go to state 43
    LDV_STATIC                    shift, and go to state 44
    LDV_AUTO                      shift, and go to state 45
    LDV_REGISTER                  shift, and go to state 46
    LDV_VOID                      shift, and go to state 47
    LDV_CHAR                      shift, and go to state 48
    LDV_INT                       shift, and go to state 49
    LDV_FLOAT                     shift, and go to state 50
    LDV_DOUBLE                    shift, and go to state 51
    LDV_BOOL                      shift, and go to state 52
    LDV_COMPLEX                   shift, and go to state 53
    LDV_SHORT                     shift, and go to state 54
    LDV_LONG                      shift, and go to state 55
    LDV_SIGNED                    shift, and go to state 56
    LDV_UNSIGNED                  shift, and go to state 57
    LDV_STRUCT                    shift, and go to state 58
    LDV_UNION                     shift, and go to state 59
    LDV_ENUM                      shift, and go to state 60
    LDV_TYPEDEF_NAME              shift, and go to state 61
    LDV_UNIVERSAL_TYPE_SPECIFIER  shift, and go to state 62
    LDV_CONST                     shift, and go to state 63
    LDV_RESTRICT                  shift, and go to state 64
    LDV_VOLATILE                  shift, and go to state 65
    LDV_INLINE                    shift, and go to state 66
    ".."                          shift, and go to state 67
    "..."                         shift, and go to state 68

    $default  reduce using rule 39 (c_declaration_specifiers_opt)

    c_declaration_specifiers_aux  go to state 87
    c_declaration_specifiers_opt  go to state 90
    c_storage_class_specifier     go to state 70
    c_type_specifier              go to state 71
    c_type_qualifier              go to state 72
    c_function_specifier          go to state 73


State 73

   36 c_declaration_specifiers_aux: c_function_specifier . c_declaration_specifiers_opt

    LDV_TYPEDEF                   shift, and go to state 42
    LDV_EXTERN                    shift, and go to state 43
    LDV_STATIC                    shift, and go to state 44
    LDV_AUTO                      shift, and go to state 45
    LDV_REGISTER                  shift, and go to state 46
    LDV_VOID                      shift, and go to state 47
    LDV_CHAR                      shift, and go to state 48
    LDV_INT                       shift, and go to state 49
    LDV_FLOAT                     shift, and go to state 50
    LDV_DOUBLE                    shift, and go to state 51
    LDV_BOOL                      shift, and go to state 52
    LDV_COMPLEX                   shift, and go to state 53
    LDV_SHORT                     shift, and go to state 54
    LDV_LONG                      shift, and go to state 55
    LDV_SIGNED                    shift, and go to state 56
    LDV_UNSIGNED                  shift, and go to state 57
    LDV_STRUCT                    shift, and go to state 58
    LDV_UNION                     shift, and go to state 59
    LDV_ENUM                      shift, and go to state 60
    LDV_TYPEDEF_NAME              shift, and go to state 61
    LDV_UNIVERSAL_TYPE_SPECIFIER  shift, and go to state 62
    LDV_CONST                     shift, and go to state 63
    LDV_RESTRICT                  shift, and go to state 64
    LDV_VOLATILE                  shift, and go to state 65
    LDV_INLINE                    shift, and go to state 66
    ".."                          shift, and go to state 67
    "..."                         shift, and go to state 68

    $default  reduce using rule 39 (c_declaration_specifiers_opt)

    c_declaration_specifiers_aux  go to state 87
    c_declaration_specifiers_opt  go to state 91
    c_storage_class_specifier     go to state 70
    c_type_specifier              go to state 71
    c_type_qualifier              go to state 72
    c_function_specifier          go to state 73


State 74

   17 primitive_pointcut_signature_macro: LDV_ID '(' . macro_param_opt ')'

    LDV_ID  shift, and go to state 92
    "..."   shift, and go to state 93

    $default  reduce using rule 19 (macro_param_opt)

    macro_param_opt  go to state 94
    macro_param      go to state 95


State 75

   13 primitive_pointcut: LDV_MACRO_POINTCUT '(' primitive_pointcut_signature_macro ')' .

    $default  reduce using rule 13 (primitive_pointcut)


State 76

   14 primitive_pointcut: LDV_FILE_POINTCUT '(' primitive_pointcut_signature_file ')' .

    $default  reduce using rule 14 (primitive_pointcut)


State 77

   80 c_type_qualifier_list: c_type_qualifier .

    $default  reduce using rule 80 (c_type_qualifier_list)


State 78

   73 c_pointer: '*' c_type_qualifier_list_opt .
   74          | '*' c_type_qualifier_list_opt . c_pointer

    '*'  shift, and go to state 38

    $default  reduce using rule 73 (c_pointer)

    c_pointer  go to state 96


State 79

   79 c_type_qualifier_list_opt: c_type_qualifier_list .
   81 c_type_qualifier_list: c_type_qualifier_list . c_type_qualifier

    LDV_CONST     shift, and go to state 63
    LDV_RESTRICT  shift, and go to state 64
    LDV_VOLATILE  shift, and go to state 65

    $default  reduce using rule 79 (c_type_qualifier_list_opt)

    c_type_qualifier  go to state 97


State 80

   67 c_direct_declarator: LDV_ID .

    $default  reduce using rule 67 (c_direct_declarator)


State 81

   68 c_direct_declarator: '(' . c_declarator ')'

    '*'  shift, and go to state 38

    $default  reduce using rule 71 (c_pointer_opt)

    c_declarator   go to state 98
    c_pointer_opt  go to state 40
    c_pointer      go to state 41


State 82

   66 c_declarator: c_pointer_opt c_direct_declarator .
   69 c_direct_declarator: c_direct_declarator . '[' int_opt ']'
   70                    | c_direct_declarator . '(' c_parameter_type_list ')'

    '('  shift, and go to state 99
    '['  shift, and go to state 100

    $default  reduce using rule 66 (c_declarator)


State 83

   57 c_type_specifier: LDV_STRUCT LDV_ID .

    $default  reduce using rule 57 (c_type_specifier)


State 84

   58 c_type_specifier: LDV_UNION LDV_ID .

    $default  reduce using rule 58 (c_type_specifier)


State 85

   59 c_type_specifier: LDV_ENUM LDV_ID .

    $default  reduce using rule 59 (c_type_specifier)


State 86

   32 c_declaration_specifiers: $@1 c_declaration_specifiers_aux $@2 .

    $default  reduce using rule 32 (c_declaration_specifiers)


State 87

   40 c_declaration_specifiers_opt: c_declaration_specifiers_aux .

    $default  reduce using rule 40 (c_declaration_specifiers_opt)


State 88

   33 c_declaration_specifiers_aux: c_storage_class_specifier c_declaration_specifiers_opt .

    $default  reduce using rule 33 (c_declaration_specifiers_aux)


State 89

   34 c_declaration_specifiers_aux: c_type_specifier c_declaration_specifiers_opt .

    $default  reduce using rule 34 (c_declaration_specifiers_aux)


State 90

   35 c_declaration_specifiers_aux: c_type_qualifier c_declaration_specifiers_opt .

    $default  reduce using rule 35 (c_declaration_specifiers_aux)


State 91

   36 c_declaration_specifiers_aux: c_function_specifier c_declaration_specifiers_opt .

    $default  reduce using rule 36 (c_declaration_specifiers_aux)


State 92

   21 macro_param: LDV_ID .
   24            | LDV_ID . "..."

    "..."  shift, and go to state 101

    $default  reduce using rule 21 (macro_param)


State 93

   23 macro_param: "..." .

    $default  reduce using rule 23 (macro_param)


State 94

   17 primitive_pointcut_signature_macro: LDV_ID '(' macro_param_opt . ')'

    ')'  shift, and go to state 102


State 95
